# ComfyUI_Video_Utilities

./: README.md  Translation_config.json  Video_Utilities.py  __init__.py  config.py  diagnose_ffmpeg_error.py  fix_model_paths.py  pyproject.toml  requirements.txt  requirements_subtitle.txt  server.py  universal_subject_detection.py  video_flicker_comparison.py  video_last_frame_extractor.py
.github/workflows/: publish_action.yml
examples/: 全功能示例工作流.json
js/: color_picker.js  gif_preview.js  index.js  live_video_monitor.js  load_af_video.js  prompt_text_node.js  rgb_empty_image.js  upload_live_video.js  upload_live_video_v2.js  video_preview.js
nodes/: __init__.py  audio_to_text.py  color_picker.py  text_to_video_dynamic.py  text_to_video_scrolling.py  text_to_video_static.py
utils/: __init__.py  animation.py  asr_engine.py  scrolling_renderer.py  subtitle_renderer.py  text_wrapper.py
