[project]
name = "ComfyUI-GLM4"
description = "ComfyUI GLM Nodes: Seamlessly integrate ZhipuAI GLM models into ComfyUI for enhanced text generation and image-to-prompt capabilities. Features include advanced text chat (video prompt expansion) and GLM-4V powered image description."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["zhipuai"]

[project.urls]
Repository = "https://github.com/msola-ht/ComfyUI-GLM4"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "msola"
DisplayName = "ComfyUI-GLM4"
Icon = ""
includes = []
