[project]
name = "ComfyUI_Video_Utilities"
description = "ComfyUI Video Utilities: A comprehensive collection of video processing nodes for ComfyUI including video stitching, frame extraction, GIF conversion, live video monitoring, and preview capabilities."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/Ken-Chen/ComfyUI_Video_Utilities"
"Bug Tracker" = "https://github.com/xuchenxu168/Comfyui-Index-TTS2/issues"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "ComfyUI_Video_Utilities"
Icon = ""
includes = []
